--- a/Counter/src/components/Counter.module.css
+++ b/Counter/src/components/Counter.module.css
@@ -1,3 +1,7 @@
+* {
+   font-family: 'Courier New', Courier, monospace;
+}
+
 .counter {
   margin: 5rem auto;
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.2);
@@ -20,4 +24,25 @@
   color: #3c0080;
   margin: 2rem 0;
   font-weight: bold;
+}
+
+.btn, .btnIncrement, .btnDecrement {
+  margin: 5px;
+  border: unset;
+  color:#f4f0fa;
+  padding: 10px 15px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.btn {
+  background-color: #3c0080;
+}
+
+.btnIncrement {
+  background-color: rgb(0, 132, 255);
+}
+
+.btnDecrement {
+  background-color: rgb(255, 0, 85);
 }
